--- a/src/FlagsNet.csproj
+++ b/src/FlagsNet.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="StackExchange.Redis" Version="2.0.571" />
+    <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
