--- a/src/FlagsNet.csproj
+++ b/src/FlagsNet.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.571" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
