--- a/tests/FlagsNet.Tests.csproj
+++ b/tests/FlagsNet.Tests.csproj
@@ -13,7 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\FlagsNet.csproj" />
+    <ProjectReference Include="..\src\client\FlagsNet.csproj" />
+    <ProjectReference Include="..\src\api\FlagsNet.Api.csproj" />
   </ItemGroup>
 
 </Project>
